# webtools

./: .gitignore  Cargo.toml  README.md  justfile
scripts/: bench_fetch.sh
src/: cli.rs  error.rs  fetch.rs  lib.rs  main.rs  markdown.rs  search.rs
tests/: cli.rs  fetch_http.rs  live.rs  markdown_golden.rs
tests/fixtures/: article.html  article.md  table.html  table.md
