[package]
name = "webtools"
version = "0.1.0"
edition = "2024"

[dependencies]
scraper = "0.24.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
ureq = { version = "2.12.1", features = ["json", "tls"] }
url = "2.5.7"

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
tiny_http = "0.12.0"
